--- a/src/app/word-display/word-display.scss
+++ b/src/app/word-display/word-display.scss
@@ -1,38 +1,31 @@
+.typing-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  margin-top: 160px;
+}
+
+.status-bar {
+  display: flex;
+  justify-content: center;
+}
+
 .typing-container {
   outline: none;
   background: #111;
-  color: #bbb;
   padding: 16px 20px;
   border-radius: 14px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-  max-width: 1200px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+  max-width: 900px;
   max-height: 250px;
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
-  line-height: 40px;
-  cursor: text;
-  margin-top: 140px;
-  white-space: normal; /* بدل pre-wrap */
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-left: 200px;
-  font-family: 'Roboto Mono', monospace; /* 👈 */
-  font-size: 22px;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 15px;
   line-height: 40px;
   color: #D1D0C5;
+  cursor: text;
+  margin-left: 80px;
 }
-
-.word {
-  font-size: 22px;
-  letter-spacing: 0;       /* no extra spacing */
-  word-spacing: 0;         /* no gap inside */
-}
-
-.word span {
-  display: inline-block;   /* keeps chars together */
-  margin: 0;
-  padding: 0;
-}
-
 
 .words-container {
   display: flex;
@@ -42,36 +35,47 @@
   line-height: 2rem;
 }
 
-.word span.correct { color: #52d17a; }
-.word span.incorrect { color: #e05555; }
+.word {
+  font-size: 25px;
+}
+
+.word span {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+}
+
+.word span.correct {
+  color: #52d17a;
+}
+
+.word span.incorrect {
+  color: #e05555;
+}
+
 
 .cursor {
-  position: relative;
   display: inline-block;
-   left: -10px;  /* 👈 make sure cursor has a box */
+  position: relative;
+  width: 0;
+  height: 1em;
+  animation: blink 1s step-start infinite;
 }
 
 .cursor::after {
-  content: '';
+  content: "";
   position: absolute;
-  top: 0;
-  left: -3px;   /* 👈 بدل من right */
-  width: 2px;
-  height: 100%;
-  background: #ffcc00;
-  animation: blink 1s step-start 0s infinite;
+  left: -15px;
+  bottom: -15px;
+  width: 1ch;
+  height: 2px;
+  background: #ffd83d;
 }
 
 @keyframes blink {
-  50% { opacity: 0; }
-}
-
-
-
-
-.status-bar {
-  display: flex;
-  margin-top: 150px;
+  50% {
+    opacity: 0;
+  }
 }
 
 .timer {
